--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 requests>=2.31.0
 pandas>=2.0.0
 rdflib>=7.0.0
+python-dotenv>=1.0.0
+influxdb-client>=1.18.0
+psycopg2-binary>=2.9.9
 jupyter>=1.0.0
 notebook>=7.0.0
 matplotlib>=3.7.0
