Add module thu thập đầu tiên Fix #9

--- a/.env.example
+++ b/.env.example
@@ -10,55 +10,12 @@ OPENWEATHER_INTERVAL=[]
 OPENAQ_API_KEY=[KEY]
 OPENAQ_INTERVAL=[]
 
-# ============================================
-# OverPass API (OpenStreetMap)
-# ============================================
-OVERPASS_URL=[]
-OVERPASS_INTERVAL=[]
 
-# ============================================
-# PostgreSQL Configuration
-# ============================================
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=opendata_fithou
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_secure_password_here
+# API Keys
+OPENWEATHER_API_KEY=your_openweather_api_key
+OPENAQ_API_KEY=your_openaq_api_key
+OVERPASS_URL=https://overpass-api.de/api/interpreter
+WIKIDATA_SPARQL_URL=https://query.wikidata.org/sparql
 
+# GTFS không cần key
 # ============================================
-# InfluxDB Configuration
-# ============================================
-INFLUXDB_URL=http://localhost:8086
-INFLUXDB_ORG=opendata_fithou
-INFLUXDB_BUCKET=weather_air_quality
-INFLUXDB_TOKEN=your_influxdb_token_here
-INFLUXDB_USERNAME=admin
-INFLUXDB_PASSWORD=your_influxdb_password_here
-
-# ============================================
-# FIWARE Orion Context Broker (tùy chọn)
-# ============================================
-ORION_URL=http://localhost:1026
-ORION_SERVICE=opendata_fithou
-ORION_SERVICE_PATH=/iot
-
-# ============================================
-# File Paths
-# ============================================
-RAW_DATA_DIR=./raw_data
-CLEANED_DATA_DIR=./cleaned_data
-RDF_OUTPUT_DIR=./rdf_output
-NGSI_LD_OUTPUT_DIR=./ngsi_ld_output
-LOG_DIR=./logs
-
-# ============================================
-# Logging Configuration
-# ============================================
-LOG_LEVEL=INFO
-LOG_FILE=./logs/opendata_fithou.log
-
-# ============================================
-# Application Configuration
-# ============================================
-APP_ENV=development
-DEBUG=True
