--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,83 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 
-# Môi trường ảo
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
 venv/
+.venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
 
-# Dữ liệu
-raw_data/
-cleaned_data/
-data/raw/
-
-# VSCode/IDE
+# IDEs
 .vscode/
 .idea/
-
-# Khác
+*.swp
+*.swo
+*~
 .DS_Store
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Logs
 *.log
-a.md
+logs/
+
+# Data files (raw/temporary)
+data/raw/openweather/
+data/temp/
+*.tmp
+raw_data/
+cleaned_data/
+
+# Cache files
 translation_cache.json
+*.cache
+
+# Documentation builds
+docs/_build/
+site/
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+a.md
