--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ rdflib>=7.0.0
 python-dotenv>=1.0.0
 influxdb-client>=1.18.0
 psycopg2-binary>=2.9.9
+geopy>=2.4.0
+tqdm>=4.66.0
 jupyter>=1.0.0
 notebook>=7.0.0
 matplotlib>=3.7.0
